# routes/orderRoutes.js
@@ -4,7 +4,7 @@ const orderController = require('../controllers/orderController');
 const auth = require('../middleware/auth');
 router.post('/create', auth, orderController.createOrder);
 //router.get('/', auth, orderController.getAllOrders);
-router.get('/all', orderController.getAllOrders);
+router.get('/all', orderController.findAllOrder);
 
 module.exports = router;
- 
+
