# routes/userRoutes.js
@@ -9,7 +9,7 @@ const User = require('../models/user');
 // Get all users
 exports.getAllUsers=async (req, res) => {
   try {
-    const users = await User.getAllOrders();
+    const users = await User.findAll();
     res.json(users);
   } catch (error) {
     res.status(500).json({ error: error.message });
